# sentence2pronunciation

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg
src/sentence2pronunciation/: __init__.py  annotation_handling.py  api.py  core.py  utils.py
src/word_to_pronunciation/: __init__.py  annotation_handling.py  api.py  core.py  types.py  utils.py
tests/: test_core.py  test_lookup_cache.py  test_multiprocessing.py  utils.py
tests/py_core/: test_sentences2pronunciations_from_cache.py
tests/test_core_py/: test_word2pronunciation.py
tests/test_utils_py/: test_separate_symbols.py
word_to_pronunciation_tests/: utils.py
word_to_pronunciation_tests/test_core_py/: test_get_parts_and_weights.py  test_get_pronuciations.py  test_get_weights.py  test_merge_pronunciations.py  test_word2pronunciation.py
word_to_pronunciation_tests/test_utils_py/: test_symbols_join.py
