[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "word-to-pronunciation"
version = "0.0.1"
description = "Create pronunciations of words with the possibility of ignoring punctuation and splitting on hyphens before lookup."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
  {email = "stefan.taubert@posteo.me"},
  {name = "Stefan Taubert"}
]
maintainers = [
  {email = "stefan.taubert@posteo.me"},
  {name = "Stefan Taubert"}
]
keywords = [
  "Language",
  "Linguistics"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: OS Independent",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "pronunciation-dictionary >= 0.0.3",
]

[project.urls]
Homepage = "https://github.com/stefantaubert/sentence2pronunciation"
Issues = "https://github.com/stefantaubert/sentence2pronunciation/issues"

[project.scripts]
dict-from-annotation-cli = "dict_from_annotation.cli:run"

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "word_to_pronunciation",
]
exclude = [
  "word_to_pronunciation_tests",
  "word_to_pronunciation_debug"
]
namespaces = true

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
testpaths = [
  "src/word_to_pronunciation_tests",
]

[tool.autopep8]
indent-size = 2
ignore = ["E121"]
max_line_length = 100

[tool.isort]
line_length = 100
indent = 2
known_first_party = [
  "word_to_pronunciation",
]
known_third_party = [
  "pronunciation_dictionary"
]
