[metadata]
name = word-to-pronunciation
version = 1.0.0
author="Stefan Taubert"
author_email="stefan.taubert@informatik.tu-chemnitz.de"
description=""
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/stefantaubert/word_to_pronunciation"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src